fixing padding/spacing on full width slides

--- a/_assets/css/custom/slides.scss
+++ b/_assets/css/custom/slides.scss
@@ -30,6 +30,12 @@
   .slide-content{
     position: relative;
   }
+  @include media-query($small-screen){
+    padding-right: 2rem;
+  }
+  @include media-query($small-phone){
+    padding-right: 0;
+  }
 }
 
 .slide-17{
